fixed launcher modal window header on mobile view

--- a/client/styles/layout/_body.scss
+++ b/client/styles/layout/_body.scss
@@ -2863,8 +2863,10 @@ $light-inprogress: #68c9fd;
     padding-bottom: 20px !important;
 }
 .__ci-runner-lg-title {
-    height: 20px !important;
-    line-height: 20px !important;
+    @media(min-width: $screen-phone + 1px) {
+        height: 20px !important;
+        line-height: 20px !important;
+    }
     * {
         font-size: 20px !important;
         font-weight: normal !important;
@@ -2876,6 +2878,10 @@ $light-inprogress: #68c9fd;
         font-weight: 500;
         font-size: 14px;
         letter-spacing: 0.1px;
+    }
+
+    .close-button {
+        top: 12px !important;
     }
 
     .md-dialog-content > [ng-transclude] {
